--- a/chat.html
+++ b/chat.html
@@ -246,7 +246,8 @@
       'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFnbXhjbHhhaGFxbnZ2eGhnY21zIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDM3OTYxODYsImV4cCI6MjA1OTM3MjE4Nn0.PhMpyFo9ZRgtLHdRyo6MXNjFNFy5WkH8LeqWnPJJCIE'
     );
 
-let historique = [];
+let questions = [];
+let reponses = [];
 let templateParams = {};
 let interviewId = null;
 let recognition;
@@ -307,77 +308,36 @@ async function genererPlan() {
   }
 }
 async function sendMessage() {
+  const input = document.getElementById("userInput");
   const text = input.value.trim();
   if (!text) return;
 
+  // Enregistre la réponse
+  reponses[questionIndex] = text;
+
+  // Affiche dans l'interface
   afficher("Vous", text, "user");
-  historique.push({ role: "user", content: text });
 
-  // ✅ Compter uniquement les messages utilisateur pour identifier la séquence correcte
-  const userMessagesCount = historique.filter(m => m.role === "user").length;
-  const currentSequenceId = sequenceParQuestion[userMessagesCount - 1] || 1;
+  // Passe à la question suivante
+  questionIndex++;
 
-  // 🔢 Initialiser compteur de messages par séquence si besoin
-  if (!sequenceCounts[currentSequenceId]) sequenceCounts[currentSequenceId] = 0;
-
-  // 📦 Stocker dans le segment de la séquence
-  if (!segments[currentSequenceId]) segments[currentSequenceId] = [];
-  segments[currentSequenceId].push(text);
-  sequenceCounts[currentSequenceId]++;
-
-  console.log(`✅ Réponse ajoutée à la séquence ${currentSequenceId}, total : ${sequenceCounts[currentSequenceId]}`);
-
-  // 🧼 Nettoyage du champ de saisie
-  input.value = "";
-
-  try {
-    const query = new URLSearchParams(templateParams).toString();
-    const response = await fetch(`https://lifebook-docker.onrender.com/api/chat?${query}`, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ messages: historique })
-    });
-
-    if (!response.ok) {
-      const errorText = await response.text();
-      console.error("Erreur API OpenAI :", errorText);
-      afficher("LifeBook", "❌ L’IA n’a pas répondu correctement. Réessayez.", "bot");
-      return;
-    }
-
-    const data = await response.json();
-    let botText = data.reply;
-
-    // 🔍 Nettoyer l’étiquette de séquence éventuelle
-    const texteNettoye = botText.replace(/^###\s*Séquence\s*:?[\s]*\d+/gi, "").trim();
-
-    // 📥 Stocker proprement dans l'historique
-    historique.push({
-      role: "assistant",
-      content: `### Séquence : ${currentSequenceId}\n\n${botText}`
-    });
-
-    // 💬 Affichage
-    afficher("LifeBook", texteNettoye, "bot");
-    miseAJourProgression();
-
-    // 🔊 Lecture vocale
-    fetch("https://lifebook-docker.onrender.com/api/voice", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ text: texteNettoye })
-    })
-    .then(res => res.blob())
-    .then(blob => {
-      const audio = new Audio(URL.createObjectURL(blob));
-      audio.play();
-    });
-
-  } catch (err) {
-    console.error("❌ Erreur inattendue :", err);
-    afficher("LifeBook", "⚠️ Une erreur s’est produite. Vérifiez votre connexion ou réessayez.", "bot");
+  // Si c’est la fin du questionnaire
+  if (questionIndex >= questions.length) {
+    afficher("LifeBook", "✅ Vous avez terminé toutes les questions ! Vous pouvez maintenant générer le livre.", "bot");
+    input.disabled = true;
+    document.getElementById("sendBtn").disabled = true;
+    return;
   }
+
+  // Affiche la prochaine question
+  afficherQuestion(questionIndex);
+  miseAJourProgression();
+
+  // Reset input
+  input.value = "";
+  input.style.height = "auto";
 }
+
 async function genererLivre() {
   if (!historique || historique.length < 4) {
     alert("⛔️ Pas assez de contenu pour générer un livre. Complétez plus de réponses.");
@@ -600,16 +560,75 @@ function toggleRecording() {
 let sequenceParQuestion = [];
     
 async function chargerTemplateSequence({ type, qui, age, format }) {
-  const nomFichier = `./templates/${type}-${qui}-${age}-${format}.js`; // ❌ plus de perso
+  const nomFichier = `./templates/${type}-${qui}-${age}-${format}.js`;
   try {
     const module = await import(nomFichier);
+
+    // ✅ Ajoute cette ligne
+    questions = module.questions || [];
+
+    // ✅ Ligne déjà présente
     sequenceParQuestion = module.sequenceParQuestion || [];
-    console.log("✅ Séquences chargées :", sequenceParQuestion);
+
+    console.log("✅ Template chargé avec", questions.length, "questions");
   } catch (err) {
     console.error("❌ Impossible de charger le template :", nomFichier, err);
+    questions = [];
     sequenceParQuestion = [];
   }
 }
+
+    function afficher(auteur, texte, classe) {
+    const msg = document.createElement("div");
+    msg.className = "message " + classe;
+    msg.innerHTML = `<strong>${auteur} :</strong><br>${marked.parse(texte)}`;
+    const container = document.getElementById("messages");
+    container.innerHTML = "";
+    container.appendChild(msg);
+    container.scrollTop = container.scrollHeight;
+  }
+
+  function afficherQuestion(index) {
+    const question = questions[index];
+    if (!question) return;
+    afficher("LifeBook", question, "bot");
+    input.value = reponses[index] || "";
+    input.focus();
+    document.getElementById("progression").innerText = `Question ${index + 1} / ${questions.length}`;
+  }
+
+  function enregistrerReponse(index, texte) {
+    if (!texte) return;
+    reponses[index] = texte;
+    const seqId = sequenceParQuestion[index] || 1;
+    if (!segments[seqId]) segments[seqId] = [];
+    segments[seqId][sequenceCounts[seqId] || 0] = texte;
+    sequenceCounts[seqId] = (sequenceCounts[seqId] || 0) + 1;
+  }
+
+  document.getElementById("nextBtn").addEventListener("click", () => {
+    enregistrerReponse(questionIndex, input.value.trim());
+    if (questionIndex < questions.length - 1) {
+      questionIndex++;
+      afficherQuestion(questionIndex);
+    }
+  });
+
+  document.getElementById("prevBtn").addEventListener("click", () => {
+    enregistrerReponse(questionIndex, input.value.trim());
+    if (questionIndex > 0) {
+      questionIndex--;
+      afficherQuestion(questionIndex);
+    }
+  });
+
+  document.getElementById("sendBtn").addEventListener("click", () => {
+    enregistrerReponse(questionIndex, input.value.trim());
+    if (questionIndex < questions.length - 1) {
+      questionIndex++;
+      afficherQuestion(questionIndex);
+    }
+  });
 async function initChat() {
   console.log("🚀 initChat lancé");
 
@@ -617,146 +636,58 @@ async function initChat() {
     const params = new URLSearchParams(window.location.search);
     interviewId = params.get("id");
 
+    // 🔁 Chargement des paramètres
+    templateParams = {
+      type: params.get("type") || "bio",
+      qui: params.get("qui") || "moi",
+      age: params.get("age") || "18",
+      format: params.get("format") || "court",
+    };
+
+    // 🔁 Chargement du template (questions & séquences)
+    await chargerTemplateSequence(templateParams);
+    console.log("✅ Template chargé :", templateParams);
+
     if (interviewId) {
-      // 🔁 Cas : chargement d'une interview existante
       const { data, error } = await supabase
         .from("responses")
         .select("content, params")
         .eq("id", interviewId)
         .single();
 
-      if (data?.params && typeof data.params === "object") {
-        const currentParams = new URLSearchParams(window.location.search);
-
-        for (const [key, value] of Object.entries(data.params)) {
-          if (!currentParams.has(key)) currentParams.set(key, value);
-        }
-
-        currentParams.set("id", interviewId);
-        const newUrl = `${window.location.pathname}?${currentParams.toString()}`;
-        history.replaceState(null, "", newUrl);
-        console.log("🔁 URL mise à jour avec :", newUrl);
-
-        // ✅ Rechargement du bon template
-        templateParams = {
-          type: currentParams.get("type") || "bio",
-          qui: currentParams.get("qui") || "moi",
-          age: currentParams.get("age") || "18",
-          perso: currentParams.get("perso") || "il",
-          format: currentParams.get("format") || "court",
-        };
-await chargerTemplateSequence({
-  type: templateParams.type,
-  qui: templateParams.qui,
-  age: templateParams.age,
-  format: templateParams.format
-});
-      }
-
       if (error || !data?.content || !Array.isArray(data.content)) {
-        afficher("LifeBook", "❌ Impossible de charger l’interview existante. Essayez à nouveau plus tard.", "bot");
+        afficher("LifeBook", "❌ Impossible de charger l’interview existante.", "bot");
         console.error("⚠️ Erreur Supabase :", error);
         return;
       }
 
-      historique = data.content;
+      // 🧠 Injection des réponses (dans reponses[])
+      reponses = data.content;
 
-      // 🧼 Affichage propre de l'historique
-      historique.forEach(msg => {
-        const texte = (msg.content || "").replace(/^###\s*Séquence\s*:?[\s]*\d+/gi, "").trim();
+      // 🧼 Affichage des questions/réponses existantes
+      reponses.forEach((reponse, index) => {
+        const question = questions[index] || `Question ${index + 1}`;
+        afficher("LifeBook", question, "bot");
+        afficher("Vous", reponse, "user");
 
-        if (msg.role === "assistant" && msg.content.includes("## Chapitre")) {
-          afficher("Plan proposé", marked.parse(texte), "bot");
-        } else {
-          const auteur = msg.role === "assistant" ? "LifeBook" : "Vous";
-          afficher(auteur, texte, msg.role);
-        }
+        const seqId = sequenceParQuestion[index] || 1;
+        if (!segments[seqId]) segments[seqId] = [];
+        segments[seqId].push(reponse);
+        sequenceCounts[seqId] = (sequenceCounts[seqId] || 0) + 1;
       });
 
-      // 🔢 Mise à jour progression
-      questionIndex = historique.filter(m => m.role === "user").length;
+      questionIndex = reponses.length;
       miseAJourProgression();
-
-      // 🧩 Reconstruction des séquences
-      sequenceCounts = {};
-      segments = {};
-      let currentSequenceId = 1;
-      let userIndex = 0;
-
-      for (const msg of historique) {
-        if (msg.role === "user") {
-          const seqId = sequenceParQuestion[userIndex] || 1;
-          if (!segments[seqId]) segments[seqId] = [];
-          segments[seqId].push(msg.content.trim());
-          sequenceCounts[seqId] = (sequenceCounts[seqId] || 0) + 1;
-          userIndex++;
-        } else if (msg.role === "assistant" && msg.content.includes("### Séquence")) {
-          const match = msg.content.match(/###\s*Séquence\s*:?[\s]*(\d+)/i);
-          if (match) currentSequenceId = match[1];
-        }
-      }
-
-      console.log("🔁 Séquences reconstituées :", segments);
-      console.log("📊 Compteurs par séquence :", sequenceCounts);
-
     } else {
-      // 🆕 Cas : première utilisation
-      const initialParams = new URLSearchParams(window.location.search);
-      templateParams = {
-        type: initialParams.get("type") || "bio",
-        qui: initialParams.get("qui") || "moi",
-        age: initialParams.get("age") || "18",
-        perso: initialParams.get("perso") || "il",
-        format: initialParams.get("format") || "court",
-      };
-
-await chargerTemplateSequence({
-  type: templateParams.type,
-  qui: templateParams.qui,
-  age: templateParams.age,
-  format: templateParams.format
-});
-      console.log("🧠 Template initial chargé :", templateParams);
-
-      const response = await fetch(`https://lifebook-docker.onrender.com/api/chat?type=${templateParams.type}&qui=${templateParams.qui}&age=${templateParams.age}&perso=${templateParams.perso}&format=${templateParams.format}`, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ messages: [] })
-      });
-
-      if (!response.ok) {
-        const errorText = await response.text();
-        console.error("❌ Erreur dans la réponse OpenAI :", errorText);
-        afficher("LifeBook", "❌ L’IA n’a pas répondu correctement. Réessayez.", "bot");
-        return;
-      }
-
-      const data = await response.json();
-      if (!data.reply || typeof data.reply !== "string") {
-        afficher("LifeBook", "❌ L’IA n’a pas répondu correctement. Réessayez.", "bot");
-        return;
-      }
-
-      afficher("LifeBook", data.reply, "bot");
-      historique.push({ role: "assistant", content: data.reply });
-
-      fetch("https://lifebook-docker.onrender.com/api/voice", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ text: data.reply })
-      })
-        .then(res => res.blob())
-        .then(blob => {
-          const audio = new Audio(URL.createObjectURL(blob));
-          audio.play();
-        })
-        .catch(err => {
-          console.error("Erreur audio :", err);
-        });
+      // 🆕 Nouvelle interview
+      reponses = Array(questions.length).fill("");
+      questionIndex = 0;
+      afficher("LifeBook", questions[0], "bot");
     }
+
   } catch (err) {
     console.error("❌ Erreur globale dans initChat :", err);
-    afficher("LifeBook", "⚠️ Une erreur s’est produite au lancement du chat. Vérifiez votre connexion ou réessayez plus tard.", "bot");
+    afficher("LifeBook", "⚠️ Une erreur s’est produite au lancement du chat.", "bot");
   }
 }
 
