--- a/index.html
+++ b/index.html
@@ -170,24 +170,24 @@
       <a href="#" class="btnCommencer">Commencer maintenant</a>
     </div>
   </div>
-  <img src="https://raw.githubusercontent.com/Manupri974/lifebook-landing/refs/heads/main/assets/Image%20haut%20de%20pager.png" alt="Famille">
+  <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20haut%20de%20pager.png" alt="Famille">
 </section>
 
 <section class="section" id="fonctionnement">
   <h2 style="text-align:center;">Comment ça marche ?</h2>
   <div class="steps">
     <div class="card">
-      <img src="https://raw.githubusercontent.com/Manupri974/lifebook-landing/refs/heads/main/assets/Image%20encart%20interview.png" alt="Interview">
+      <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20interview.png" alt="Interview">
       <h3>1. Interview</h3>
       <p>Avancez à votre rythme. Plus vous partagez de souvenirs, plus le récit sera fidèle à votre histoire.</p>
     </div>
     <div class="card">
-      <img src="https://raw.githubusercontent.com/Manupri974/lifebook-landing/refs/heads/main/assets/Image%20redaction.png" alt="Rédaction">
+      <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20redaction.png" alt="Rédaction">
       <h3>2. Rédaction</h3>
       <p>L'IA transforme vos réponses en un récit fluide, littéraire et personnel.</p>
     </div>
     <div class="card">
-      <img src="https://raw.githubusercontent.com/Manupri974/lifebook-landing/refs/heads/main/assets/Image%20encart%20livraison.png" alt="Livre">
+      <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20livraison.png" alt="Livre">
       <h3>3. Votre livre</h3>
       <p>Téléchargez votre e-book personnalisé ou demandez une version imprimée.</p>
     </div>
