--- a/chat.html
+++ b/chat.html
@@ -213,13 +213,13 @@
     min-height: 44px;
     box-sizing: border-box;
   }
-    .message.bot strong {
-  display: block;
-  padding: 12px 16px;
+.message.bot.chapitre {
   background: #efe0ff;
   border-left: 6px solid #7e3af2;
-  border-radius: 8px;
-  margin: 12px 0;
+  padding: 14px 18px;
+  border-radius: 12px;
+  margin: 20px 0;
+  font-weight: 600;
   font-size: 1.1em;
 }
   </style>
@@ -555,12 +555,11 @@ function toggleRecording() {
     
 let sequenceParQuestion = [];
     
-let titreChapitres = {}; // 🔁 à déclarer globalement aussi si ce n’est pas encore fait
-
 async function chargerTemplateSequence({ type, qui, age, format }) {
   const nomFichier = `./templates/${type}-${qui}-${age}-${format}.js`;
   try {
     const module = await import(nomFichier);
+    questions = module.questions || [];
     sequenceParQuestion = module.sequenceParQuestion || [];
     titreChapitres = module.titreChapitres || {}; // ✅ on récupère aussi les titres
     console.log("✅ Séquences chargées :", sequenceParQuestion);
@@ -601,7 +600,7 @@ function afficherQuestion(index) {
   if (chapId !== chapitreActuel && titreChapitres[chapId]) {
     chapitreActuel = chapId;
     const titre = titreChapitres[chapId];
-    afficher("Chapitre", `**${titre}**`, "bot");
+afficher("Chapitre", `**${titre}**`, "bot chapitre");
   }
 
   afficher("LifeBook", question, "bot");
