--- a/chat.html
+++ b/chat.html
@@ -12,195 +12,208 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
   <!-- Styles globaux -->
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      margin: 0;
-      background: linear-gradient(to right, #f3e8ff, #fff0f5);
-      color: #333;
-    }
+ <style>
+  body {
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    background: linear-gradient(to right, #f3e8ff, #fff0f5);
+    color: #333;
+  }
 
-    header {
-      background: #fff;
-      padding: 20px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
+  header {
+    background: #fff;
+    padding: 20px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-    header a {
-      text-decoration: none;
-      color: #a347ba;
-      font-weight: 600;
-      font-size: 1.4em;
-    }
+  header a {
+    text-decoration: none;
+    color: #a347ba;
+    font-weight: 600;
+    font-size: 1.4em;
+  }
 
-    #chat {
-      max-width: 700px;
-      margin: 40px auto;
-      background: #ffffff;
-      border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
-      padding: 30px;
-    }
+  #chat {
+    max-width: 700px;
+    margin: 40px auto;
+    background: #ffffff;
+    border-radius: 16px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
+    padding: 30px;
+  }
 
-    .message {
-      margin-bottom: 15px;
-      padding: 14px 18px;
-      border-radius: 12px;
-      line-height: 1.4em;
-    }
+  #messages {
+    display: flex;
+    flex-direction: column;
+  }
 
-    .bot {
-      background: #f3e8fa;
-      color: #5a2a82;
-      text-align: left;
-    }
+  .message {
+    margin-bottom: 15px;
+    padding: 14px 18px;
+    border-radius: 12px;
+    line-height: 1.4em;
+    max-width: 90%;
+    width: fit-content;
+    min-width: 60px;
+    word-wrap: break-word;
+  }
 
-    .user {
-      background: #e1f5e8;
-      color: #21543d;
-      text-align: right;
-    }
+  .message.bot {
+    background: #f3e8fa;
+    color: #5a2a82;
+    text-align: left;
+    align-self: flex-start;
+  }
 
-    #progression {
-      margin: 20px 0 10px;
-      font-size: 0.9em;
-      text-align: right;
-      color: #999;
-    }
+  .message.user {
+    background: #e1f5e8;
+    color: #21543d;
+    text-align: right;
+    align-self: flex-end;
+  }
 
-    .input-group {
-      position: relative;
-      margin-top: 10px;
-    }
-    #speechButton {
-      position: absolute;
-      top: 50%;
-      right: 8px;
-      transform: translateY(-50%);
-      background: #d3a6e4;
-      border: none;
-      border-radius: 50%;
-      width: 32px;
-      height: 32px;
-      cursor: pointer;
-      color: white;
-      font-size: 0.9em;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: background 0.2s ease, transform 0.3s ease;
-    }
+  #progression {
+    margin: 20px 0 10px;
+    font-size: 0.9em;
+    text-align: right;
+    color: #999;
+  }
 
-    #speechButton:hover {
-      background: #b674d3;
-    }
+  .input-group {
+    position: relative;
+    margin-top: 10px;
+  }
 
-    #speechButton.recording {
-      background: #a347ba;
-      animation: pulse 1.2s infinite;
-    }
+  #speechButton {
+    position: absolute;
+    top: 50%;
+    right: 8px;
+    transform: translateY(-50%);
+    background: #d3a6e4;
+    border: none;
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
+    color: white;
+    font-size: 0.9em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background 0.2s ease, transform 0.3s ease;
+  }
 
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.15); }
-      100% { transform: scale(1); }
-    }
+  #speechButton:hover {
+    background: #b674d3;
+  }
 
-    .button-group {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-      gap: 12px;
-      margin-top: 20px;
-    }
+  #speechButton.recording {
+    background: #a347ba;
+    animation: pulse 1.2s infinite;
+  }
 
-    .button-group button {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 8px;
-      padding: 12px;
-      border: none;
-      border-radius: 12px;
-      background: #a347ba;
-      color: white;
-      font-weight: 600;
-      font-size: 0.9em;
-      cursor: pointer;
-      transition: background 0.2s ease;
-    }
+  @keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.15); }
+    100% { transform: scale(1); }
+  }
 
-    .button-group button i {
-      font-size: 1em;
-    }
+  .button-group {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    gap: 12px;
+    margin-top: 20px;
+  }
 
-    .button-group button:hover {
-      background: #912ca3;
-    }
+  .button-group button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    padding: 12px;
+    border: none;
+    border-radius: 12px;
+    background: #a347ba;
+    color: white;
+    font-weight: 600;
+    font-size: 0.9em;
+    cursor: pointer;
+    transition: background 0.2s ease;
+  }
 
-    #waveform {
-      width: 100%;
-      height: 6px;
-      background: linear-gradient(90deg, #a347ba 50%, #fff 50%);
-      background-size: 20px 100%;
-      background-repeat: repeat-x;
-      animation: wave 1s linear infinite;
-      display: none;
-      margin: 10px 0;
-      border-radius: 4px;
-    }
+  .button-group button i {
+    font-size: 1em;
+  }
 
-    @keyframes wave {
-      0% { background-position: 0 0; }
-      100% { background-position: 20px 0; }
-    }
+  .button-group button:hover {
+    background: #912ca3;
+  }
 
-    #messageStatus {
-      margin-top: 10px;
-      min-height: 20px;
-      font-size: 0.9em;
-    }
+  #waveform {
+    width: 100%;
+    height: 6px;
+    background: linear-gradient(90deg, #a347ba 50%, #fff 50%);
+    background-size: 20px 100%;
+    background-repeat: repeat-x;
+    animation: wave 1s linear infinite;
+    display: none;
+    margin: 10px 0;
+    border-radius: 4px;
+  }
 
-    /* Markdown beautification */
-    .message.bot h1,
-    .message.bot h2 {
-      font-size: 1.2em;
-      font-weight: 700;
-      color: #6b1e8a;
-      margin: 18px 0 6px;
-      border-bottom: 2px solid #d9b3e4;
-      padding-bottom: 4px;
-    }
+  @keyframes wave {
+    0% { background-position: 0 0; }
+    100% { background-position: 20px 0; }
+  }
 
-    .message.bot h3 {
-      font-size: 1em;
-      font-weight: 600;
-      color: #8747a0;
-      margin: 10px 0 4px;
-    }
+  #messageStatus {
+    margin-top: 10px;
+    min-height: 20px;
+    font-size: 0.9em;
+  }
 
-    .message.bot p {
-      margin: 6px 0;
-      line-height: 1.6em;
-    }
+  /* Markdown beautification */
+  .message.bot h1,
+  .message.bot h2 {
+    font-size: 1.2em;
+    font-weight: 700;
+    color: #6b1e8a;
+    margin: 18px 0 6px;
+    border-bottom: 2px solid #d9b3e4;
+    padding-bottom: 4px;
+  }
 
-    .message.bot ul {
-      padding-left: 20px;
-      margin: 6px 0 12px;
-    }
+  .message.bot h3 {
+    font-size: 1em;
+    font-weight: 600;
+    color: #8747a0;
+    margin: 10px 0 4px;
+  }
 
-    .message.bot li {
-      margin-bottom: 6px;
-      line-height: 1.5em;
-    }
+  .message.bot p {
+    margin: 6px 0;
+    line-height: 1.6em;
+  }
 
-    .message.bot strong {
-      font-weight: bold;
-      color: #4b145c;
-    }
-      textarea#userInput {
+  .message.bot ul {
+    padding-left: 20px;
+    margin: 6px 0 12px;
+  }
+
+  .message.bot li {
+    margin-bottom: 6px;
+    line-height: 1.5em;
+  }
+
+  .message.bot strong {
+    font-weight: bold;
+    color: #4b145c;
+  }
+
+  textarea#userInput {
     width: 100%;
     padding: 14px;
     border: 1px solid #ccc;
@@ -213,16 +226,20 @@
     min-height: 44px;
     box-sizing: border-box;
   }
-.message.bot.chapitre {
-  background: #f6efff;
-  border-left: 4px solid #7e3af2;
-  padding: 10px 14px;
-  border-radius: 10px;
-  margin: 14px 0;
-  font-weight: 600;
-  font-size: 0.95em;
-}
-  </style>
+
+  .message.bot.chapitre {
+    background: #f6efff;
+    border-left: 4px solid #7e3af2;
+    padding: 10px 14px;
+    border-radius: 10px;
+    margin: 14px 0;
+    font-weight: 600;
+    font-size: 0.95em;
+    align-self: flex-start;
+    max-width: 90%;
+    width: fit-content;
+  }
+</style>
 </head>
 
 <body>
