--- a/chat.html
+++ b/chat.html
@@ -278,6 +278,7 @@ let reponses = [];
 let templateParams = {};
 let interviewId = null;
 let historique = []; // ✅ historique des échanges
+let chapitreActuel = null; // ✅ pour suivre le chapitre courant
 let recognition;
 let recording = false;
 let sequenceCounts = {};         // ✅ Pour compter les messages par séquence
