--- a/chat.html
+++ b/chat.html
@@ -677,39 +677,46 @@ async function initChat() {
         return;
       }
 
-      // 🧠 Injection des réponses (dans reponses[])
+      // 🧠 Injection des réponses
       reponses = data.content;
 
-      // 🧼 Affichage uniquement des réponses (les questions seront gérées après)
+      // 🧼 Réaffiche toutes les questions et réponses existantes
       reponses.forEach((reponse, index) => {
+        const question = questions[index] || `Question ${index + 1}`;
+        const chapId = sequenceParQuestion[index] || 1;
+
+        // Affiche le chapitre si c’est une nouvelle séquence
+        if (chapId !== chapitreActuel && titreChapitres[chapId]) {
+          chapitreActuel = chapId;
+          afficher("Chapitre", `**${titreChapitres[chapId]}**`, "bot chapitre");
+        }
+
+        afficher("LifeBook", question, "bot");
         afficher("Vous", reponse, "user");
 
-        const seqId = sequenceParQuestion[index] || 1;
-        if (!segments[seqId]) segments[seqId] = [];
-        segments[seqId].push(reponse);
-        sequenceCounts[seqId] = (sequenceCounts[seqId] || 0) + 1;
+        // Stocker le segment
+        if (!segments[chapId]) segments[chapId] = [];
+        segments[chapId].push(reponse);
+        sequenceCounts[chapId] = (sequenceCounts[chapId] || 0) + 1;
       });
 
-      // 🧭 Position actuelle = après les dernières réponses
+      // ➕ Passe à la prochaine question (si pas terminé)
       questionIndex = reponses.length;
-
-      // 🎯 Affiche chapitre (si on est en début de nouvelle séquence)
-      const chapId = sequenceParQuestion[questionIndex] || 1;
-      if (chapId !== chapitreActuel && titreChapitres[chapId]) {
-        chapitreActuel = chapId;
-        afficher("Chapitre", `**${titreChapitres[chapId]}**`, "bot chapitre");
+      if (questionIndex < questions.length) {
+        afficherQuestion(questionIndex);
+        miseAJourProgression();
+      } else {
+        afficher("LifeBook", "✅ Vous avez terminé toutes les questions ! Vous pouvez maintenant générer le livre.", "bot");
+        document.getElementById("userInput").disabled = true;
+        document.getElementById("sendBtn").disabled = true;
       }
-
-      // ➕ Affiche la question suivante
-      afficherQuestion(questionIndex);
-      miseAJourProgression();
 
     } else {
       // 🆕 Nouvelle interview
       reponses = Array(questions.length).fill("");
       questionIndex = 0;
 
-      // Afficher le premier chapitre dès le début
+      // Affiche le premier chapitre si défini
       const chapId = sequenceParQuestion[0] || 1;
       if (titreChapitres[chapId]) {
         chapitreActuel = chapId;
@@ -725,7 +732,6 @@ async function initChat() {
     afficher("LifeBook", "⚠️ Une erreur s’est produite au lancement du chat.", "bot");
   }
 }
-
 // ✅ Listeners bouton et clavier
 document.getElementById("sendBtn").addEventListener("click", sendMessage);
 document.getElementById("generateBtn").addEventListener("click", genererLivre);
