--- a/chat.html
+++ b/chat.html
@@ -298,7 +298,7 @@ async function genererPlan() {
   btn.innerHTML = `<i class="fas fa-spinner fa-spin"></i> Génération...`;
 
   try {
-    const response = await fetch("https://lifebook-docker.onrender.com/api/plan", {
+    const response = await fetch("https://lifebook-v2-1.onrender.com/api/plan", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ historique })
@@ -363,7 +363,7 @@ async function genererLivre() {
   btn.disabled = true;
   btn.innerHTML = `<i class="fas fa-spinner fa-spin"></i> Génération...`;
 
-  const API_BASE = "https://lifebook-docker.onrender.com";
+  const API_BASE = "https://lifebook-v2-1.onrender.com";
   const perso = new URLSearchParams(window.location.search).get("perso") || "il";
 
   try {
