--- a/chat.html
+++ b/chat.html
@@ -643,37 +643,87 @@ function afficherQuestion(index) {
   document.getElementById("progression").innerText = `Question ${index + 1} / ${questions.length}`;
 }
 async function initChat() {
-  console.log("🚀 Initialisation démarrée");
+  console.log("🚀 initChat lancé");
+
   try {
     const params = new URLSearchParams(window.location.search);
     interviewId = params.get("id");
+
+    templateParams = {
+      type: params.get("type") || "bio",
+      qui: params.get("qui") || "moi",
+      age: params.get("age") || "18",
+      format: params.get("format") || "court",
+    };
+
     await chargerTemplateSequence(templateParams);
+    console.log("✅ Template chargé :", templateParams);
 
     if (interviewId) {
-      const { data, error } = await supabase.from("responses")
-        .select("questions, reponses, params").eq("id", interviewId).single();
+      const { data, error } = await supabase
+        .from("responses")
+        .select("content, params")
+        .eq("id", interviewId)
+        .single();
 
-      if (error || !data) throw new Error("Erreur chargement interview");
+      if (error || !data?.content || !Array.isArray(data.content)) {
+        afficher("LifeBook", "❌ Impossible de charger l’interview existante.", "bot");
+        console.error("⚠️ Erreur Supabase :", error);
+        return;
+      }
 
-      data.questions.forEach((q, idx) => {
-        afficher("LifeBook", q, "bot");
-        afficher("Vous", data.reponses[idx], "user");
-      });
+      historique = data.content;
+      reponses = [];
+      questionIndex = 0;
 
-      reponses = data.reponses;
-      questionIndex = reponses.length;
+      let chapitreCourant = null;
+
+      for (const msg of historique) {
+        const contenu = msg.content;
+        if (msg.role === "assistant") {
+          afficher("LifeBook", contenu, "bot");
+        } else if (msg.role === "user") {
+          afficher("Vous", contenu, "user");
+          reponses[questionIndex] = contenu;
+          const chapId = sequenceParQuestion[questionIndex] || 1;
+          if (!segments[chapId]) segments[chapId] = [];
+          segments[chapId].push(contenu);
+          sequenceCounts[chapId] = (sequenceCounts[chapId] || 0) + 1;
+          questionIndex++;
+        }
+      }
+
+      if (questionIndex < questions.length) {
+        const chapId = sequenceParQuestion[questionIndex] || 1;
+        if (chapId !== chapitreCourant && titreChapitres[chapId]) {
+          chapitreCourant = chapId;
+          afficher("Chapitre", `**${titreChapitres[chapId]}**`, "bot chapitre");
+        }
+        afficherQuestion(questionIndex);
+        miseAJourProgression();
+      } else {
+        afficher("LifeBook", "✅ Vous avez terminé toutes les questions ! Vous pouvez maintenant générer le livre.", "bot");
+        document.getElementById("userInput").disabled = true;
+        document.getElementById("sendBtn").disabled = true;
+      }
 
     } else {
+      reponses = Array(questions.length).fill("");
       questionIndex = 0;
-      reponses = [];
+
+      const chapId = sequenceParQuestion[0] || 1;
+      if (titreChapitres[chapId]) {
+        chapitreActuel = chapId;
+        afficher("Chapitre", `**${titreChapitres[chapId]}**`, "bot chapitre");
+      }
+
       afficherQuestion(0);
+      miseAJourProgression();
     }
 
-    miseAJourProgression();
-
-  } catch (e) {
-    console.error("⚠️ Problème au lancement :", e);
-    afficher("LifeBook", "Erreur au chargement initial.", "bot");
+  } catch (err) {
+    console.error("❌ Erreur globale dans initChat :", err);
+    afficher("LifeBook", "⚠️ Une erreur s’est produite au lancement du chat.", "bot");
   }
 }
     
